<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="fr.cnam.guillaumelimberger.cocotuture.driver.NewOfferOKActivity">

    <TextView
        android:text="@string/info_offer_saved"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_send_email"/>

    <Button
        android:id="@+id/offerOK_buttonOK"
        android:text="@string/button_ok_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
